--- a/modules/trueCoverage_rematch/streptococcus_agalactiae.config
+++ b/modules/trueCoverage_rematch/streptococcus_agalactiae.config
@@ -1,11 +1,11 @@
 #reference_file (fasta file full path)
-/home/mpmachado/INNUca/modules/trueCoverage_rematch/campylobacter_jejuni.fasta
+/home/mpmachado/INNUca/modules/trueCoverage_rematch/streptococcus_agalactiae.fasta
 #length_extra_seq (int)
-100
+200
 #maximum_number_absent_genes (int)
-2
-#maximum_number_genes_multiple_alleles (int)
 0
+#maximum_number_genes_multiple_alleles (int)
+1
 #minimum_read_coverage (x, int)
 25
 #minimum_depth_presence (x, int)
@@ -13,6 +13,8 @@
 #minimum_depth_call (x, int)
 10
 #minimum_depth_frequency_dominant_allele (0-1, double)
-0.75
+0.60
 #minimum_gene_coverage (0-100, int)
 80
+#minimum_gene_identity (0-100, int)
+70
