--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get install -y wget
 RUN apt install -y openjdk-8-jre
 
 # -- mlst Dependencies --
-RUN wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/blast+/LATEST/ncbi-blast-2.6.0+-x64-linux.tar.gz
+RUN wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/blast+/2.6.0/ncbi-blast-2.6.0+-x64-linux.tar.gz
 RUN tar -xf ncbi-blast-2.6.0+-x64-linux.tar.gz
 RUN rm ncbi-blast-2.6.0+-x64-linux.tar.gz
 ENV PATH="/NGStools/ncbi-blast-2.6.0+/bin:${PATH}"
@@ -21,7 +21,8 @@ RUN git clone https://github.com/tseemann/mlst.git
 ENV PATH="/NGStools/mlst/bin:${PATH}"
 
 # --- INNUca ---
-RUN git clone https://github.com/B-UMMI/INNUca.git
+#RUN git clone https://github.com/B-UMMI/INNUca.git
+RUN git clone https://github.com/cimendes/INNUca.git
 
 ENV PATH="/NGStools/INNUca:${PATH}"
 #RUN INNUca.py --help
