- reverted mlst changes in docker

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -17,21 +17,17 @@ ENV PATH="/NGStools/ncbi-blast-2.6.0+/bin:${PATH}"
 RUN apt-get install -y libmoo-perl liblist-moreutils-perl
 
 # --- mlst ----
-WORKDIR /tmp/
-
 RUN git clone https://github.com/tseemann/mlst.git
-ENV PATH="/tmp/mlst/bin:${PATH}"
+ENV PATH="/NGStools/mlst/bin:${PATH}"
 
 # --- INNUca ---
-WORKDIR /NGStools/
-
 #RUN git clone https://github.com/B-UMMI/INNUca.git
 RUN git clone https://github.com/cimendes/INNUca.git
 
 ENV PATH="/NGStools/INNUca:${PATH}"
 
 #fixing permissions
-RUN chmod +x /NGStools/INNUca/Docker/update_mlst_db.sh && chmod o+wr /tmp/mlst/scripts/ && chmod -R o+wr /tmp/mlst/db/ && sed -i "s#OUTDIR=pubmlst#OUTDIR=/tmp/mlst/scripts/pubmlst#1" /tmp/mlst/scripts/mlst-download_pub_mlst
+RUN chmod +x /NGStools/INNUca/Docker/update_mlst_db.sh && chmod o+wr /NGStools/mlst/scripts/ && chmod -R o+wr /NGStools/mlst/db/ && sed -i "s#OUTDIR=pubmlst#OUTDIR=/NGStools/mlst/scripts/pubmlst#1" /NGStools/mlst/scripts/mlst-download_pub_mlst
 
 #RUN INNUca.py --help
 
