--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -2,32 +2,37 @@ FROM ubuntu:16.04
 
 WORKDIR /NGStools/
 
-# -- General Dependencies ---
 RUN apt-get update
-RUN apt-get install -y git
-RUN apt-get install -y python-dev
-RUN apt-get install -y wget
-RUN apt install -y openjdk-8-jre
+
+# -- General Dependencies ---
+RUN apt-get install -y git wget
+
+# -- INNUca General Dependencies ---
+RUN apt-get install -y python-dev default-jre
 
 # -- mlst Dependencies --
-RUN wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/blast+/2.6.0/ncbi-blast-2.6.0+-x64-linux.tar.gz
-RUN tar -xf ncbi-blast-2.6.0+-x64-linux.tar.gz
-RUN rm ncbi-blast-2.6.0+-x64-linux.tar.gz
+# Blast
+RUN wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/blast+/2.6.0/ncbi-blast-2.6.0+-x64-linux.tar.gz && tar -xf ncbi-blast-2.6.0+-x64-linux.tar.gz && rm ncbi-blast-2.6.0+-x64-linux.tar.gz
 ENV PATH="/NGStools/ncbi-blast-2.6.0+/bin:${PATH}"
+# Perl libs
 RUN apt-get install -y libmoo-perl liblist-moreutils-perl
 
 # --- mlst ----
 RUN git clone https://github.com/tseemann/mlst.git
 ENV PATH="/NGStools/mlst/bin:${PATH}"
 
-# --- INNUca ---
-#RUN git clone https://github.com/B-UMMI/INNUca.git
-RUN git clone https://github.com/cimendes/INNUca.git
+# --- ReMatCh ---
+RUN git clone https://github.com/B-UMMI/ReMatCh.git -b base_quality_filter
+ENV PATH="/NGStoolsReMatCh:${PATH}"
 
+# --- INNUca ---
+RUN git clone https://github.com/B-UMMI/INNUca.git -b v2.8
 ENV PATH="/NGStools/INNUca:${PATH}"
 
-#fixing permissions
+# fixing permissions for MLST update
 RUN chmod +x /NGStools/INNUca/Docker/update_mlst_db.sh && chmod o+wr /NGStools/mlst/scripts/ && chmod -R o+wr /NGStools/mlst/db/ && sed -i "s#OUTDIR=pubmlst#OUTDIR=/NGStools/mlst/scripts/pubmlst#1" /NGStools/mlst/scripts/mlst-download_pub_mlst
 
-#RUN INNUca.py --help
+# Clean
+RUN apt-get remove -y wget && apt-get autoclean -y
 
+WORKDIR /data/
