--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -22,7 +22,7 @@ RUN git clone https://github.com/tseemann/mlst.git
 ENV PATH="/NGStools/mlst/bin:${PATH}"
 
 # --- ReMatCh ---
-RUN git clone https://github.com/B-UMMI/ReMatCh.git -b base_quality_filter
+RUN git clone https://github.com/B-UMMI/ReMatCh.git
 ENV PATH="/NGStools/ReMatCh:${PATH}"
 
 # --- INNUca ---
