Correct kraken installation

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,13 +1,13 @@
 FROM ubuntu:16.04
 MAINTAINER Miguel Machado <mpmachado@medicina.ulisboa.pt>
-LABEL version="3.2-01"
+LABEL version="4.0-dev"
 
 WORKDIR /NGStools/
 
 RUN apt-get update
 
 # -- General Dependencies ---
-RUN apt-get install -y git wget
+RUN apt-get install -y git wget make g++
 
 # -- INNUca General Dependencies ---
 RUN apt-get install -y python-dev default-jre
@@ -18,9 +18,11 @@ RUN apt-get install -y libgomp1
 # -- kraken2 --
 RUN wget https://github.com/DerrickWood/kraken2/archive/v2.0.7-beta.tar.gz && \
     tar xf v2.0.7-beta.tar.gz && \
-    v2.0.7-beta/install_kraken2.sh /NGStools/2.0.7-beta/ && \
-    rm -r v2.0.7-beta.tar.gz v2.0.7-beta/
-ENV PATH="/NGStools/2.0.7-beta:${PATH}"
+    cd kraken2-2.0.7-beta/ && \
+    ./install_kraken2.sh /NGStools/kraken2-2.0.7-beta/ && \
+    cd /NGStools && \
+    rm -r v2.0.7-beta.tar.gz
+ENV PATH="/NGStools/kraken2-2.0.7-beta:${PATH}"
 
 # -- mlst Dependencies --
 # Blast
@@ -47,6 +49,7 @@ ENV PATH="/NGStools/INNUca:${PATH}"
 RUN chmod +x /NGStools/INNUca/Docker/update_mlst_db.sh && chmod o+wr /NGStools/mlst/scripts/ && chmod -R o+wr /NGStools/mlst/db/ && sed -i "s#OUTDIR=pubmlst#OUTDIR=/NGStools/mlst/scripts/pubmlst#1" /NGStools/mlst/scripts/mlst-download_pub_mlst
 
 # Clean
-RUN apt-get autoclean -y
+RUN apt-get remove -y make g++ && \
+    apt-get autoclean -y
 
 WORKDIR /data/
