--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 MAINTAINER Miguel Machado <mpmachado@medicina.ulisboa.pt>
-LABEL version="4.2.0-02"
+LABEL version="4.2.0-03"
 
 WORKDIR /NGStools/
 
@@ -46,17 +46,14 @@ ENV PATH="/NGStools/mlst/bin:${PATH}"
 #    python3 setup.py install && \
 #    cd /NGStools
 RUN git clone https://github.com/B-UMMI/ReMatCh.git && \
-    cd ReMatCh && \
-    git checkout bowtie_algo
-ENV PATH="/NGStools/ReMatCh/ReMatCh:${PATH}"
+    cd ReMatCh
+ENV PATH="/NGStools/ReMatCh/ReMatCh/src/samtools-1.3.1/bin:/NGStools/ReMatCh/ReMatCh/src/bcftools-1.3.1/bin:/NGStools/ReMatCh/ReMatCh/src/bowtie2-2.2.9:/NGStools/ReMatCh/ReMatCh:${PATH}"
 
 # --- INNUca ---
 RUN git clone https://github.com/B-UMMI/INNUca.git && \
-    cd INNUca && \
-    git checkout insert_size && \
     pip install setuptools
 # TODO: remove checkout
-ENV PATH="/NGStools/INNUca:${PATH}"
+ENV PATH="/NGStools/INNUca/src/fastqc_v0.11.5:/NGStools/INNUca/src/pilon_v1.23:/NGStools/INNUca/src/SPAdes-3.13.0-Linux/bin:/NGStools/INNUca/src/Trimmomatic-0.38:/NGStools/INNUca:${PATH}"
 
 # fixing permissions for MLST update
 RUN chmod +x /NGStools/INNUca/Docker/update_mlst_db.sh && chmod o+wr /NGStools/mlst/scripts/ && chmod -R o+wr /NGStools/mlst/db/ && sed -i "s#OUTDIR=pubmlst#OUTDIR=/NGStools/mlst/scripts/pubmlst#1" /NGStools/mlst/scripts/mlst-download_pub_mlst
