--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -64,11 +64,12 @@ ENV PATH="/NGStools/INNUca/src/fastqc_v0.11.5:/NGStools/INNUca/src/pilon_v1.23:/
 # fixing permissions for MLST update
 RUN chmod +x /NGStools/INNUca/Docker/update_mlst_db.sh && chmod o+wr /NGStools/mlst/scripts/ && chmod -R o+wr /NGStools/mlst/db/ && sed -i "s#OUTDIR=pubmlst#OUTDIR=/NGStools/mlst/scripts/pubmlst#1" /NGStools/mlst/scripts/mlst-download_pub_mlst
 
-RUN apt-get install -y libfontconfig1
+RUN apt-get install -y fontconfig
 # procps
 # LABEL version="4.2.1-01"
 # fonts-dejavu-core
 # fonts-dejavu
+# libfontconfig1
 
 # Clean
 RUN pip3 uninstall setuptools && \
