--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # mpmachado_stuff - file with different mpmachado stuffs
-mpmachado_stuff.*
+mpmachado_stuff*
 
 # trueCoverage_rematch fasta file
 modules/trueCoverage_rematch/*.fai
